[package]
name = "game_engine"
version = "0.1.0"
authors = ["Anton Gusev <uartman@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pancurses = "0.16.1"
crossterm = "0.17.3"
specs = { version = "0.16.1", features = ["shred-derive"] }
